--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,18 +20,12 @@
         <% files.forEach(function(val){ %>
           <div class="task min-w-72  px-3 py-4 bg-zinc-800 rounded-md border-2 border-white mx-2">
             <h1 class="text-white text-xl tracking-tighter"><%= val %></h1>
-            <a href="#" class="text-blue-600 inline-block mt-3">Read More.</a>
+            <a href="/file/<%= val%>" class="text-blue-600 inline-block mt-3">Read More.</a>
           </div>
              <% }) %>
              <%  } else{ %>
               <h3 class="text-white">No task Yet</h3>
               <% } %>
-      
-     
-
-     
-
-      
     </div>
   </div>
 </body>
