--- a/views/show.ejs
+++ b/views/show.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="w-full main min-h-screen bg-zinc-900 p-10 text-white">
-    <!-- <a class="text-blue-500 inline-block mb-10" href="#">Go Back to Home</a> -->
+    <a class="text-blue-500 inline-block mb-10" href="#">Go Back to Home</a>
     <h1 class="text-3xl tracking-tighter"><%= filename %></h1>
     <p class="text-xl mt-5 font-light"><%= filedata%></p>
   </div>
